# Doudizhu

./: CMakeLists.txt  README.md  doc.md  main.cpp
game/: GameLogic.cpp  GameLogic.h  patterns.cpp  patterns.h  utils.cpp  utils.h
network/: DecentralizedClient.cpp  DecentralizedClient.h  DecentralizedServer.cpp  DecentralizedServer.h  NetworkPolicy.cpp  NetworkPolicy.h  threading.cpp  threading.h  utils.cpp  utils.h
ui/: Game.cpp  Game.h  Game.ui  Welcome.cpp  Welcome.h  Welcome.ui
